@@ -1,19 +1,26 @@
 DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v6r2-3.12.patch1 2992 SHA256 ffdcfcc7f9f702589131eeeec864761d27800f36b642a3b650bb2c46b1049aff SHA512 006ab095bd199d771300672bf0863df8b2a631f609898e4182104e85e0f0c8d8124e1e2d1ab6bb8747324afef135554de258965b28b3b71d05fc036463253123 WHIRLPOOL 6de53c970b5536961ba701f297a575d1b3c3027b016496338e5f3392d376c37abea6fe683ace402e310bf0e5b32ddaddd2bac803d4fcd4dcb8c67f9fdf4a5b16
-DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v6r2-3.13.patch1 2992 SHA256 d1e396d0ea5028b013be985f6ea736e1bffa0df47576dc85ee7fe67fde1e2429 SHA512 ed590d6c41a3322b024d1fe772acb6f5a06b2d0a3926bf8b6f10908a708398c7b255cec83f9b3bdd4671a6ac13551aa8d3c66b9212e4c06fae36011f7bc24c37 WHIRLPOOL 6abf1f3aef6447d2852cce6a58a67c81ab4ccc3f4f5fb62f6220a2d65fa0eee4ca84c47c03012d6167afc98702b7b992f81543470c15fe9b7d7a29ebb9516541
+DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7-3.12.patch1 3346 SHA256 93e7c1cb1cadacab73eff293c4f3ffd65d795c8113e61fc817e0a02dbdd3b85c SHA512 c8043ef547080fb27791fbd30f963602b43fa683162bc86dbd81f416543f9a1855f3745179324ad21c5a27e000e9598a3ff8c24c77ff8ea2086b1459c7b66082 WHIRLPOOL 1a896c7ec3de4d763c5eeb3fb628b3e0bc642a58cd2c05b9ecb95cd42cd94698e4ed9940b1315f32fe5f88ed65ffa8c179fac15d4e835d2bde24b66eac6036f6
+DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7-3.13.patch1 3346 SHA256 d4e4b694d289629042032a80c43d502452e7cadb0f6988abe3c42bb1115edc71 SHA512 2d14c8e7b337e71c8504981c7cf3c0fe5aa10fc52c842ee7429155c34302732cf89c90ec0bc89da20e76180a6c3a858d059c065c8ce2bf8e10f9de84c3f5bbfd WHIRLPOOL 2d09e58507cd07f8dd92c4b98ec26c3ccda7e74f42624cb23150fe34e662fdf709fbcfdc19bc5dc878c5caf2bde72f72e6ab57f680f71e8d67fe3aaa5cd7f209
 DIST 0002-block-introduce-the-BFQ-v6r2-I-O-sched-for-3.12.patch1 174362 SHA256 c6ed63e10054a8519cea7e29e5421c4275e5f41faf9e769a833a0f3b4b8029e5 SHA512 bffa292c8825250f90851d8ae264ac48c872442b9f1c02a71eb4f81bb811beddc06ea920505b10a41c1c8584ed9c18846a00c3262f063c49610eab534ee8f03d WHIRLPOOL cd4caaf840fc72dd774dac9773922d6b5aa3347fe85bc405a049ad0bdc6f6f4ab830d84844e158ab0902500a03c7abcaa628e37d6286f5f6331580124a78819a
-DIST 0002-block-introduce-the-BFQ-v6r2-I-O-sched-for-3.13.patch1 174362 SHA256 d6f6ddd85b07b8057814f085377e506c1e9802790f2b89a8b580d58bdba5a207 SHA512 08f720444ff24aecd06bdf503f033dbc10b9905c407e69574281f7b1c06834c2f576eee06ae170cf7a1005d1fd9d4742b136a9d7b0cd3657ca58725ade689d09 WHIRLPOOL 3268d495ed4b9112c71ee6e2f5581ba98da67c86060995076099b2f4701d0298a2a5dfe0abda7226b01438f1a35cfb734fa5f074f86ade61d9ac8982d9de8a59
+DIST 0002-block-introduce-the-BFQ-v7-I-O-sched-for-3.12.patch1 184005 SHA256 92725caf24778ab883bf50dfb5ba0a14f77c6f29628a7193b4eff586d07776ed SHA512 376396f48f3d6158752e410de97e4f1c43654f34607cfe89416f2ae083e310bdbdffeae0226fa1d840bb7b96d91b11eb5702312f7be5389f83678923f1e792dd WHIRLPOOL 7ab4099b3fce181677103ef81f293ac58d2354ad87dbd5e9eb8f11cbb5aba4d8e3ff43dbb8408fe74f29005127bac287c35e53c5a4e6183e775c0a3e2d85a8c9
+DIST 0002-block-introduce-the-BFQ-v7-I-O-sched-for-3.13.patch1 184005 SHA256 18f4901cff181a22714213086993ee9bd0ce711ca45a1c4de401dfba20476630 SHA512 042032e54c3c5a5725f3a465d0dfd6b3fe028f99fec1f9c0568cb0f3061d0197a8ee3ca033374bd6ddca1f81bec11e4646fa13d9e5b3c67cb292788ca401dd49 WHIRLPOOL 66f7c2563633d4b2e702e3639b2bde6b76ace6ac6cc7d6c8b1a261a8796104a3cfe40023cb85edc11ecb880c9d40cd5a615c7a7965370d3fe0f1edf3584e4862
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v6r2-for-3.12.0.patch1 35687 SHA256 6e22d0bad22b9215f478759f8a0de920b37bd149de31db6b638612e6f50c85e1 SHA512 c0ebf1ac63307e75742ca2d8a2523ce56694629eec1da5a1f4fe884a78bd330a98b45e6a17d6764470de3af48f94d3866d14a83f8cf58de7746b4165a674a68a WHIRLPOOL 06d9b9c9e759635ba182d01d62e08e93c48f05dd3cc66a165194ea9408b851d89a1a6afe8b4c240b0bd9634dfe975956c870a39bfc8285dc426809c5747105fb
-DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v6r2-for-3.13.0.patch1 35687 SHA256 87507a2407a1161665fbd6cb3db1f532762836355f1bcb0b30d0028503e8f4cb SHA512 33e4f6490bb94bb951693bb17ad2e3b70fc65be75aab3508f0b2a4ae931f1329d524cc1b4412d5aa47459e14a0627da25d5f4df4b5518caec38289369b57a4df WHIRLPOOL b6577eb41257bb3464667f601941c6ab85d73e83acb0056f184a0f3bf3e605efffddeef5f7a502e79dedfc2441ad6c4cbb1f873c4c51a2bcd815a0c8fe217669
+DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7-for-3.12.0.patch1 34378 SHA256 0ccf6b0ae1051bd9d12f291da600300020d7f0e0892613bfca18e0a72ed62b79 SHA512 5780d6b5d79155a7d9597992e40025eb36eadc325117a4be76ada6c5600a39169a362af327df90520427c9c9042c0db8d9d147586f7ca435bda64ad384688a2d WHIRLPOOL dd396665448dcf2ebeccebf5777b0e48869bd6913cea5f874eea0af3d6e9ab858607fdd8876377b87f3c20298e8889dfb9119bec7429171479ee8c9fbb38b6b3
+DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7-for-3.13.0.patch1 34378 SHA256 ca7de5411b5315cdab1256b4c2d68a20b2658161a8b7cd58c67b48c8f0fdd7e3 SHA512 3cf1024400c78ecb9fc857e7c6c3462d2b142260402e493ae8528c8eb2cecf5ddf568976ca5223f99cb63e7fb7c2c51e45bc7af46867ddc195154392118c1b95 WHIRLPOOL cd6b85d0e4597ad640216e519d9d124c11a81baf3632192d132de84469a5c48c67d5acdd978a6e27aa331db88b1b4d0410031eb002d916a1c619bc52fb167ff4
 DIST README-3.12.7.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
 DIST README-3.12.8.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
+DIST README-3.12.9.BFQ 15314 SHA256 3e7818d1c7d741ba2d8f2d1a33f6169480646e5dba2c7158b169e7f3b92e89b6 SHA512 23d1b8ef55c6e69f115c5569e188997873356c7bf4edd4122b1190c14aa5158834f42096fd45adaf4eefbb337669f70038c374624ad0c9d3c2ccc1ebd4fc921a WHIRLPOOL a06648eb130efeaca9cd25a62b6604569f4e61a1573bf1e1ad7ceb1439a6a1ba49d6cdba61b495e958bb11948343a2883dbce3a04ec33101533ab2d6be34b97c
 DIST README-3.13.0.BFQ 10347 SHA256 0ef50b60864e87c2b459dd2d7597ec057e9675b9d8544ba6c9aa5c0ec02481e3 SHA512 333ffa54419c98434a6d3e6c95a720a2a99fedda214dfc1a6064da68161f40571991783bfc45b890d1e61575354c25bdf5cb7907b6fededeb25e3eb696456d2d WHIRLPOOL 82a220441412ffdcb39439fb90651085cfc852a0385e908804462a4d8931c2eabe6678b9911a5989ecf1f524fa371d07dacb9e647bece489429c684417026d47
 DIST aufs-sources-3.12.x_p20140119.tar.xz 152164 SHA256 5d231c48ccd780dbbc9d099a8d500ea01f352819796ed2923d6380e5e3e61cc7 SHA512 0e246f711d82edbd5d9e5abda8d9167cac6205571adf1999408bc7fe9de75e2f0600d586b1185fbda40bb5fa8f4ca500c27241f9bc06fb7b062f246d0d7d9051 WHIRLPOOL 1df4d86482144bf27f1281cfe705b712bd4c1311098eb22382ea27aedf99754287ce33b1b1e985db66c1f55bcd57eb5e55a4c7e59b7d6cb62a133ed211df4571
+DIST aufs-sources-3.12.x_p20140127.tar.xz 152188 SHA256 649ca61d4cd38e5b93aaefc1acdaa09367f552bea41a8b8e1ac792f51673a631 SHA512 760bdfc20113cdfae9c126851c94b99447c0203c5b4a517f785871308bed0710742a355cec6761ea216fd62a3921fc3a701015af56b28bff543ed5c0dce9fb26 WHIRLPOOL 899523d0a09b747c7e305512d4a11486747f3796f6a199743ae1c268fc7bfc997a5f1d6e1212e3c9eeca26bce959d8e96b1417ec35ae5578992d3366169fc8dd
 DIST aufs-sources-3.12_p20140114.tar.xz 152144 SHA256 357f0520ec2ea64572e4f323811f4457694aeec9bba3204bedc45f95e7f77e0c SHA512 c55dfa9c22eca7f71c467ac0e4745e064de9dda98a6faf8475a105aa0f2c0293e0f8e74bd79c56b1d36a082fcf677314e99597e01cc6cc5928f0239a8591eab6 WHIRLPOOL 349069914ad6a65f5961cd418d6de59a1e29fa80276a111872129a2adac44f7bc4e8697e6eae74c5b3464a479974d0b73e530a89ff6b456b2ed32942c694300a
 DIST aufs-sources-3.13_p20140127.tar.xz 152200 SHA256 e18951d96973503292d7f801721f2cbc4c40dfff07fccbd44d0db8fff980ab39 SHA512 1aadf71acfef0d6de248869eefdd4e9d8cd69e1a897e123a4d9c80d78dcedd31538b4e7a44325bb8a6a8234af11d799e753bb8a00322c3307a47a6a6362ede6c WHIRLPOOL e5b4b14a040661f17e46cafe70f32faa18d38cd62b16b494d4627107ecba7ceab85a1f5f67fccf8db3ca10bf60a808f8e6f573f9a9eea95f5742df9983e61e10
 DIST deblob-3.12 120320 SHA256 1d767acd3f461bcaa7ebef744dce1ca3eefde1cd41fde4c69a449e2470ab8c0e SHA512 61073cb763e3e0c21a84c0ee888087fbbf37b667ce0efbbc6c2ebc46ccae8460553511e347cf23d3c3603eec64df738ad4552a1b527453c7d795b8f90c4cf678 WHIRLPOOL c64cc566944ac241149a2a517da069185830be5b8ee25168b2b6b942bcf24fe3f2c0fe487b51a5b7e73e2910af2cabd7167cd1497ab7272c865d1eb3e68e4efe
 DIST deblob-3.13 122060 SHA256 8fc8f5242cd58f8560d1caecdc6ab786d6470660280f910a8b70bc47fae5eabb SHA512 90c329c7b2e49ca8e51b3ccd5ede999f01a70ce1b227f958f34306d32414787192d51481a22ae831c30179e2ef83bdf4eb5c356b49864ab8d7b5a9ed6baed294 WHIRLPOOL 56a7dc599ece173ace43a633ddf2d1fc4876b392e8cd31dfe840a6109eebed18a8a9c33c7e191ea9cf0b605818a59312c76787c77aa479b6c84feb23083c0fb4
 DIST deblob-check-3.12 601108 SHA256 e6c07b4220f86007ea31f9ed5d01023253296ddaa0710e65e08f231eccf6085a SHA512 fb293fb5093c410b319203cf0a65457a3ef28430ad6257b08a6e3eb77011d79708c51121c0a8776f55124259719782b4ac9b4c54155c13bb05a2679541816887 WHIRLPOOL e056b4edccd36911fe415cd1780bb484875a16237dce89316144c8ee07df3253bc19abdbee2e51ab3dd9248682470e80409819584c188e22601026e8df222754
 DIST deblob-check-3.13 612002 SHA256 55a9264ad886259c9b20f1365245a993482a0f593d01e1824eddb748bc57e271 SHA512 64d93694acc9dd1046e967b0d0f285068cc248815a3c84c58aa4cb3b6bbc3fdcda4bce3b119b44f522a9cb6cfc10a0992cb5d19f880c7d6055c5c0ed3201905c WHIRLPOOL 1b196a945f5f07c78eff5e8742472b0d8ff570c7e11e2cd3d4d954f8fbd260b27b2779f2d794a30992e4d492b873d5f73163501a0c04372e0167e98640d587c5
+DIST genpatches-3.12-10.base.tar.xz 261224 SHA256 9949e934be03c5e34a593cb579c8e6e288bfe94c29f0d2fd29650f51cbc46a4e SHA512 1f84b59ad0095701b41f16e0a9f47d8d96424f53cef02a639e7ea65d4cb8f7e388533b761c1ddf8cc2abb5efa7bcae40ed36dffd8b17e45574f67a5067a56ab0 WHIRLPOOL 4832f07df622eb0ee6344338727987e961eafb3315f4e29f619f6fe37e9975497d68eeb73b5be6dc72b26d7a2a15867031b9b0232c2745eed01e465128ce68b0
+DIST genpatches-3.12-10.extras.tar.xz 18148 SHA256 2f865fc797b96ca30ac437718bb8b9feef442d3ed99b61224d5dc496b5ac7f2c SHA512 a0851b94669e097b3493baa6625b052dd6ce6bf3b318ba62474b8d230526bbacd3751a99ea108b641dcab490129aa370327e8c971996db3afb088e3053f761ff WHIRLPOOL edea43599166eedc00a4254fd32930e21f082af64e067cfb2b8731016062ce132641ae3abbd30a321bddf66db6eabe026d979b98f1802c12c0ffc26f8b149eff
 DIST genpatches-3.12-8.base.tar.xz 235944 SHA256 688ca01177f786e8a1f2d904ce52b99e8b87bbc0964e4b5b41b311032a9fd4d6 SHA512 6389485a4c5bc537b03e89266e9fb7d8cb5f7ab305d7c91f672cfb180dba74562a6e6f2ce99065a6d90eaa5caa79cd131f168d24f806e5ab3687e7de846dbe56 WHIRLPOOL baf4f0b15fec1f23e67c44b34c7c77ef377945f230f88e03d534d33090239519cacef40cff987cbb03323ea534d835423bc9c5abefe4cd7b1fb851cc1c2cad71
 DIST genpatches-3.12-8.extras.tar.xz 18148 SHA256 2f865fc797b96ca30ac437718bb8b9feef442d3ed99b61224d5dc496b5ac7f2c SHA512 a0851b94669e097b3493baa6625b052dd6ce6bf3b318ba62474b8d230526bbacd3751a99ea108b641dcab490129aa370327e8c971996db3afb088e3053f761ff WHIRLPOOL edea43599166eedc00a4254fd32930e21f082af64e067cfb2b8731016062ce132641ae3abbd30a321bddf66db6eabe026d979b98f1802c12c0ffc26f8b149eff
 DIST genpatches-3.12-9.base.tar.xz 255288 SHA256 cb298100c98f0532113e798026da02cad6436c4bdb6391d142cf35655fa90e49 SHA512 1bc58569399d98d4a0bf38fad07fe56eed52c00f69afc4cde1ad46144be6719855e8dca0148fa4b675525ff69fb79bf06c93f494a2cf7c8dd80898bab6bccab6 WHIRLPOOL 6f9c0a11209b11a182f8a21d2fc6b29ff379f9aea4828609a1ec5f56262fb594b1049ab414de631be8414d233866ba7aee873e36b2d42a33e4d7b5d3a187f119
